2018-06-12

        * Version 1.6.0 released
        ========================

        Add methods and operators to handle additional columns in GPha 
        Made GApplicationPar::query() method public
        Fix handling of q-mode parameters (#2495)
        Speed up computation of diffuse map models for CTA (#2466)
        Enhance GModelSpatialRadialProfileGauss class (#2463)
        Increase integration precision for CTA diffuse model response (#2458)
        Add GCTAModelRadialAcceptance model component setter methods
        Handle observation-specific energy thresholds in CTA On/Off analysis (#2429)
        Add GCTAEdisp::prob_erecobin() method (#2422)
        Add gammalib::gauss_integral() function (#2422)
        Keep existing library path in installation script on Mac OS X (#2420)
        Make GPha, GArf and GRmf output files XSPEC compliant (#2404)
        Add methods to store file attributes in GPha (#2404)
        Add GSkyDir::cos_dist() method (#2309)
        Add GCTABackground::rate_ebin() method and gammalib::atan2() and
          gammalib::plaw_integral() functions (#2308)
        Handle extended models in CTA On/Off analysis (#2292)
        Preserve GTIs when copying GCTAEventList and GCTAEventCube objects (#2054)


2018-04-26

        * Bug fix version 1.5.2 released
        ================================

        Correct number of internal spectral nodes in GCTABackground3D (#2462)


2018-03-26

        * Bug fix version 1.5.1 released
        ================================

        Fix MANPATH for Mac OS X systems (#2420)
        Add kludge to handle noisy CTA 2D energy dispersion (#2342, #2403).
        Prevent unintentional deallocation of arguments (#2340).
        Correct sky map smoothing.


2018-01-23

        * Version 1.5.0 released
        ========================

        Change DATE_OBS, DATE_END, TIME_OBS and TIME_END FITS keywords into DATA-OBS,
          DATE-END, TIME-OBS and TIME-END