@@ -1,4 +1,4 @@
-2018-06-12
+2018-06-13
 
         * Version 1.6.0 released
         ========================
@@ -21,6 +21,7 @@
           gammalib::plaw_integral() functions (#2308)
         Handle extended models in CTA On/Off analysis (#2292)
         Preserve GTIs when copying GCTAEventList and GCTAEventCube objects (#2054)
+        Use MJD reference of first observation for exposure cube (#2054)
 
 
 2018-04-26
